Fix vertical alignments.
This works for editors of the default height (2 rows) and in the OU
theme at least. (In Moodle standard theme it seems to be 1px out.)

Also, it does not work in Windows 10 Edge browser, and sadly Moodle does
not give us a class on <body> for that, so I have ignored that browser
for now.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,15 @@
 .editor_ousupsub {
     display: inline-block;
+    vertical-align: -14px;
+}
+body.ie .editor_ousupsub {
+    vertical-align: 26px;
+}
+/* Moodle does not add an 'edge' classname to body yet, and when they do
+   (MDL-50807) the class name used may not be 'edge', but in any case, this is
+   the right offset. */
+body.edge .editor_ousupsub {
+    vertical-align: 25px;
 }
 
 .editor_ousupsub_content_wrap {
@@ -12,7 +22,6 @@
 }
 .editor_ousupsub_content {
     padding: 2px;
-    vertical-align: center;
 }
 
 div.editor_ousupsub_toolbar {
